--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>2002年からの経過日数</title>
+  <title>2002年2月10日からの経過日数</title>
 </head>
 <body>
-  <h1>2002年からの経過日数</h1>
+  <h1>2002年2月10日からの経過日数</h1>
   <p id="result"></p>
 
   <script>
-    // 2002年1月1日のタイムスタンプを取得
-    const startDate = new Date('2002-01-01');
+    // 2002年2月10日のタイムスタンプを取得
+    const startDate = new Date('2002-02-10');
     const today = new Date();
 
     // 日数を計算
@@ -17,7 +17,7 @@
     const daysPassed = Math.floor(timeDiff / (1000 * 60 * 60 * 24));
 
     // 結果を表示
-    document.getElementById('result').textContent = `2002年1月1日から今日までの経過日数は ${daysPassed} 日です。`;
+    document.getElementById('result').textContent = `2002年2月10日から今日までの経過日数は ${daysPassed} 日です。`;
   </script>
 </body>
 </html>
