--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>2002年2月10日からの経過日数</title>
+  <title>日数</title>
   <style>
     #result {
       font-size: 500px;
