--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       .then(response => response.json())
       .then(data => {
         // オ〇禁日数の計算
-        const startDate = new Date(data.startDate1);
+        const startDate1 = new Date(data.startDate1);
         const timeDiff1 = today.getTime() - startDate1.getTime();
         const daysPassed1 = Math.floor(timeDiff1 / (1000 * 60 * 60 * 24));
         document.getElementById('result1').textContent = daysPassed1;
