--- a/index.html
+++ b/index.html
@@ -12,17 +12,24 @@
       background-color: #f4f4f4;
     }
 
-    h1 {
-      font-size: 10vw;  /* ビューポート幅の10% */
-      text-align: center;
-      margin: 20px 0;
+    .display {
+      margin: 0;
+      padding: 3vw 0 5vw 0;
+      width: 100%;
     }
 
-    p {
-      font-size: 30vw;  /* ビューポート幅の30% */
-      margin-top: 0;
+    .title {
+      font-size: 10vw;  /* ビューポート幅の10% */
+      font-weight: bold;
       text-align: center;
-      margin-right: 20px;
+      margin: 0;
+    }
+
+    .result {
+      font-size: 30vw;  /* ビューポート幅の30% */
+      line-height: 30vw;
+      margin: 0;
+      text-align: center;
     }
 
     /* さらに小さい画面に対応するための最小文字サイズ */
@@ -31,7 +38,7 @@
         font-size: 15vw;  /* ビューポート幅の15% */
       }
 
-      p {
+      .result {
         font-size: 40vw;  /* ビューポート幅の40% */
         text-align: center;
         margin-right: 0;
@@ -40,10 +47,14 @@
   </style>
 </head>
 <body>
-  <h1>オ〇禁日数</h1>
-  <p id="result1"></p>
-  <h1>夢〇禁日数</h1>
-  <p id="result2"></p>
+  <div class="display">
+    <p class="title">オ〇禁日数</p>
+    <p class="result" id="result1"></p>
+  </div>
+  <div class="display">
+    <p class="title">夢〇禁日数</p>
+    <p class="result" id="result2"></p>
+  </div>
 
   <script>
     const jsonUrl = 'https://shiono-desu.github.io/days/data.json';
