--- a/index.html
+++ b/index.html
@@ -4,47 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>日数</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-    }
-
-    .display {
-      margin: 0;
-      padding: 3vw 0 5vw 0;
-      width: 100%;
-    }
-
-    .title {
-      font-size: 10vw;  /* ビューポート幅の10% */
-      font-weight: bold;
-      text-align: center;
-      margin: 0;
-    }
-
-    .result {
-      font-size: 30vw;  /* ビューポート幅の30% */
-      line-height: 30vw;
-      margin: 0;
-      text-align: center;
-    }
-
-    /* さらに小さい画面に対応するための最小文字サイズ */
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 15vw;  /* ビューポート幅の15% */
-      }
-
-      .result {
-        font-size: 40vw;  /* ビューポート幅の40% */
-        text-align: center;
-        margin-right: 0;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="display">
@@ -57,13 +17,11 @@
   </div>
 
   <script>
-    const jsonUrl = 'https://shiono-desu.github.io/days/data.json';
-    const today = new Date();
-
     // JSONファイルを取得して日数を計算
-    fetch(jsonUrl)
+    fetch("data.json")
       .then(response => response.json())
       .then(data => {
+        const today = new Date();
         // オ〇禁日数の計算
         const startDate1 = new Date(data.startDate1);
         const timeDiff1 = today.getTime() - startDate1.getTime();
